--- a/app/src/main/res/layout/activity_full_notification.xml
+++ b/app/src/main/res/layout/activity_full_notification.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AyatFragment">
-
+    tools:context=".FullNotificationActivity">
 
     <ProgressBar
         android:id="@+id/progress_circular"
@@ -12,13 +12,12 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
 
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ayatRv"
+        android:id="@+id/notiRv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="false"
-        tools:listitem="@layout/ayat_list_item"
-        />
+        tools:listitem="@layout/ayat_list_item" />
+
 
 </RelativeLayout>
