--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,6 @@
     <!--nice color-->
     <color name="yellow">#FFEB3B</color>
     <color name="green">#4CAF50</color>
+    <color name="app_color">#27262C</color>
 
 </resources>
