--- a/app/src/main/res/layout/activity_full_data.xml
+++ b/app/src/main/res/layout/activity_full_data.xml
@@ -7,7 +7,7 @@
     android:layout_margin="10dp"
     android:orientation="vertical"
     android:scrollbars="vertical"
-    tools:context=".FullDataActivity">
+    tools:context=".activities.FullDataActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
