--- a/app/src/main/res/layout/fragment_wallpaper.xml
+++ b/app/src/main/res/layout/fragment_wallpaper.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:gravity="center"
-    tools:context=".WallpaperFragment">
+    tools:context=".fragments.WallpaperFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
