--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -6,21 +6,21 @@
     <item
         android:id="@+id/nav_notification"
         android:icon="@drawable/ic_notification"
-        android:title="Notification" />
+        android:title="নোটিফিকেশন" />
 
     <item
         android:id="@+id/nav_developer"
         android:icon="@drawable/ic_developer"
-        android:title="Developer" />
+        android:title="ডেভেলপার" />
 
     <item
         android:id="@+id/nav_policy"
         android:icon="@drawable/ic_privacy"
-        android:title="Privacy Policy" />
+        android:title="প্রাইভেসি পলিসি" />
 
     <item
         android:id="@+id/nav_apps"
         android:icon="@drawable/ic_apps"
-        android:title="Our Apps" />
+        android:title="আমাদের অ্যাপ সমূহ " />
 
 </menu>
