--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,38 +5,15 @@
         <item name="colorPrimary">@color/app_color</item>
         <item name="colorPrimaryVariant">@color/app_color</item>
         <item name="colorOnPrimary">@color/white</item>
+
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/app_color</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-
-        <!--Trodev application color and bottom navigation color-->
-        <!-- Primary brand color. -->
-        <!--   <item name="colorPrimary">@color/purple_500</item>
-                <item name="colorPrimaryVariant">@color/purple_700</item>
-                <item name="colorOnPrimary">@color/white</item>
-                &lt;!&ndash; Secondary brand color. &ndash;&gt;
-                <item name="colorSecondary">@color/teal_200</item>
-                <item name="colorSecondaryVariant">@color/teal_700</item>
-                <item name="colorOnSecondary">@color/black</item>
-                &lt;!&ndash; Status bar color. &ndash;&gt;
-                <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
-
-        <!--Convertix color code and bottom navigation color-->
-        <!-- Primary brand color. -->
-        <!--  <item name="colorPrimary">@color/black</item>
-                <item name="colorPrimaryVariant">@color/purple_700</item>
-                <item name="colorOnPrimary">#FFFFFF</item>
-                &lt;!&ndash; Secondary brand color. &ndash;&gt;
-                <item name="colorSecondary">@color/white</item>
-                <item name="colorSecondaryVariant">@color/teal_700</item>
-                <item name="colorOnSecondary">@color/black</item>
-                &lt;!&ndash; Status bar color. &ndash;&gt;
-                <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>-->
-
 
     </style>
 
@@ -58,8 +35,14 @@
 
     <!--###############################-->
     <!--Navigation drawer font style is here-->
-    <style name="RobotoTextViewStyle" parent="android:Widget.TextView">
-        <item name="android:fontFamily">@font/mulish_semibold</item>
+    <style name="bottom_nav_font_style" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/popins</item>
+    </style>
+
+    <!--###############################-->
+    <!--Navigation drawer font style is here-->
+    <style name="navigation_font_style" parent="android:Widget.TextView">
+        <item name="android:fontFamily">@font/kalpurush</item>
     </style>
 
     <!-- ProgressBar color -->
