some update is complete

--- a/app/src/main/res/layout/activity_details_ayat.xml
+++ b/app/src/main/res/layout/activity_details_ayat.xml
@@ -44,6 +44,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/kalpurush"
                     android:text="Ayah"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/black"
                     android:textSize="17sp"
                     />
@@ -55,6 +56,7 @@
                     android:layout_gravity="right"
                     android:fontFamily="@font/kalpurush"
                     android:text="Author"
+                    android:layout_marginTop="5dp"
                     android:textColor="@color/black"
                     android:textSize="15sp"
                     android:textStyle="bold" />
