--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/sf_ns_text"
         android:gravity="center"
-        android:text="Daily Ayah"
+        android:text="Daily Ayat"
         android:textColor="@color/black"
         android:textSize="35sp"
         android:textStyle="bold"
