--- a/app/src/main/res/layout/activity_full_notification.xml
+++ b/app/src/main/res/layout/activity_full_notification.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.FullNotificationActivity">
 
-    <ProgressBar
-        android:id="@+id/progress_circular"
-        android:layout_width="wrap_content"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        app:lottie_rawRes="@raw/loading_three"
+        android:layout_centerInParent="true"
+        app:lottie_autoPlay="true"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notiRv"
