--- a/app/src/main/res/layout/fragment_books.xml
+++ b/app/src/main/res/layout/fragment_books.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,11 +16,13 @@
         android:layout_margin="5dp"
         tools:listitem="@layout/books_item_layout" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="wrap_content"
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
+        app:lottie_rawRes="@raw/loading_three"
         android:layout_centerInParent="true"
-        android:visibility="gone" />
+        app:lottie_autoPlay="true"
+        />
 
 </RelativeLayout>
