--- a/app/src/main/res/layout/developer_bottomsheet_layout.xml
+++ b/app/src/main/res/layout/developer_bottomsheet_layout.xml
@@ -51,8 +51,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_margin="10dp"
-                        android:fontFamily="@font/trebuc"
-                        android:text="This app is developed by Trodev."
+                        android:fontFamily="@font/kalpurush"
+                        android:text="এই অ্যাপটি ডেভেলপ করেছে Trodev"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -60,29 +60,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="10dp"
-                        android:fontFamily="@font/trebuc"
-                        android:text="👩‍💻Head Developer:\n              Md. Zobayer Hasan Nayem \n              Software Engineer of Trodev"
-                        android:textColor="@color/black"
-                        android:textSize="18sp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="10dp"
-                        android:fontFamily="@font/trebuc"
-                        android:text="👩‍💻Software Quality Assurance (SQA):\n              Jubayer Hossain \n              Software Quality Assurance \n              Engineer of Trodev"
-                        android:textColor="@color/black"
-                        android:textSize="18sp" />
-                    
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/kalpurush"
-                        android:text="👉  If you facing any problem using this apps,\nPlease contact with us"
+                        android:text="👉 অ্যাপটি চালনার সময় যদি কোনো ধরনের সমস্যা হলে যোগাযোগ করুন নিমোক্ত ই-মেইল এবং ফোন নাম্বারে"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="16sp"
@@ -97,7 +77,7 @@
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/trebuc"
                         android:gravity="left"
-                        android:text="📧 zobayer.dev@gmail.com"
+                        android:text="📧 admin@trodev.com"
                         android:textColor="@color/black"
                         android:textIsSelectable="true"
                         android:autoLink="email"
