--- a/app/src/main/res/layout/activity_hadis_ayat.xml
+++ b/app/src/main/res/layout/activity_hadis_ayat.xml
@@ -7,7 +7,7 @@
     android:layout_margin="10dp"
     android:orientation="vertical"
     android:scrollbars="vertical"
-    tools:context=".activities.DetailsAyatActivity">
+    tools:context=".activities.DetailsHadisActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/kalpurush"
-                    android:text="Headline"
+                    android:text="@string/hadis"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -43,7 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/kalpurush"
-                    android:text="Ayah"
+                    android:text="@string/hadis"
                     android:layout_marginTop="5dp"
                     android:textColor="@color/black"
                     android:textSize="17sp"
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:fontFamily="@font/kalpurush"
-                    android:text="Author"
+                    android:text="@string/hadis_author"
                     android:layout_marginTop="5dp"
                     android:textColor="@color/black"
                     android:textSize="15sp"
